further adaptations for dynamic coloring

--- a/.config/hypr/conf.d/autostart.conf
+++ b/.config/hypr/conf.d/autostart.conf
@@ -26,8 +26,8 @@ exec-once = systemctl --user start hyprpolkitagent || $NOTIFY_ERROR "hyprpolkita
 
 # hyprlang if HYPR_NOCTALIA
 
-exec = git -C $HOME/.config/quickshell/noctalia/ pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "NOCTALIA up to date." || $NOTIFY_ERROR "NOCTALIA was updated."
-exec = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c noctalia
+exec-once = git -C $HOME/.config/quickshell/noctalia/ pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "NOCTALIA up to date." || $NOTIFY_ERROR "NOCTALIA was updated."
+exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c noctalia
 
 # hyprlang endif
 
@@ -39,8 +39,8 @@ exec = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DI
 
 # hyprlang if HYPR_CAELESTIA
 
-exec = git -C $HOME/.config/quickshell/caelestia pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "CAELESTIA up to date." || $NOTIFY_ERROR "CAELESTIA was updated."
-exec = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c caelestia
+exec-once = git -C $HOME/.config/quickshell/caelestia pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "CAELESTIA up to date." || $NOTIFY_ERROR "CAELESTIA was updated."
+exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c caelestia
 
 # hyprlang endif
 
