noctalia coloring added

--- a/.config/hypr/conf.d/autostart.conf
+++ b/.config/hypr/conf.d/autostart.conf
@@ -49,5 +49,5 @@ exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISAB
 # OpenRGB — Set Leviathan V2 X LEDs to black
 # ------------------------------------------------------------
 
-exec = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
+exec-once = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
 
