zed hot-reload works now

--- a/.config/hypr/conf.d/nvidia.conf
+++ b/.config/hypr/conf.d/nvidia.conf
@@ -1,7 +1,7 @@
 
 # hyprlang if HYPR_NVIDIA
 
-exec = $NOTIFY_SUCCESS "NVidia settings loaded."
+exec-once = $NOTIFY_SUCCESS "NVidia settings loaded."
 
 env = GBM_BACKEND,nvidia-drm
 env = LIBVA_DRIVER_NAME,nvidia
@@ -15,5 +15,3 @@ env = EGL_PLATFORM,wayland
 env = MOZ_ENABLE_WAYLAND,1
 
 # hyprlang endif
-
-
