current impressions added

--- a/.config/noctalia/settings.json
+++ b/.config/noctalia/settings.json
@@ -313,12 +313,12 @@
             {
                 "directory": "/home/toni/DotfilesData/backgrounds",
                 "name": "DP-1",
-                "wallpaper": "/home/toni/Wallpaper/bonefire-night.jpg"
+                "wallpaper": "/home/toni/Wallpaper/forest-night-blue.png"
             },
             {
                 "directory": "/home/toni/DotfilesData/backgrounds",
                 "name": "DP-3",
-                "wallpaper": "/home/toni/Wallpaper/bonefire-night.jpg"
+                "wallpaper": "/home/toni/Wallpaper/forest-night-blue.png"
             }
         ],
         "randomEnabled": false,
