better keybinds for media player; small changes

--- a/.config/mangohud/mangohud.conf
+++ b/.config/mangohud/mangohud.conf
@@ -12,13 +12,13 @@
 ################ PERFORMANCE #################
 
 ### Limit the application FPS. Comma-separated list of one or more FPS values (e.g. 0,30,60). 0 means unlimited (unless VSynced)
-fps_limit= 72,80,144,160
+fps_limit= 160,80,60
 
 ### early = wait before present, late = wait after present
-fps_limit_method=early
+fps_limit_method=late
 
 ### VSync [0-3] 0 = adaptive; 1 = off; 2 = mailbox; 3 = on
-vsync=0
+vsync=3
 
 ### OpenGL VSync [0-N] 0 = off; >=1 = wait for N v-blanks, N > 1 acts as a FPS limiter (FPS = display refresh rate / N)
 # gl_vsync=-2
@@ -133,7 +133,7 @@ cpu_power
 
 ### Display FPS and frametime
 show_fps_limit
-fps
+# fps
 fps_sampling_period=500
 # fps_color_change
 # fps_value=60,100,144
@@ -152,7 +152,7 @@ fps_sampling_period=500
 ### Display miscellaneous information
 #engine_version
 #engine_short_names
- # gpu_name
+# gpu_name
 # vulkan_driver
 # wine
 # exec_name
@@ -171,7 +171,7 @@ frame_timing
 
 ### Gamescope related options
 ## Display the status of FSR (only works in gamescope)
-fsr
+# fsr
 ## Hides the sharpness info for the `fsr` option (only available in gamescope)
 # hide_fsr_sharpness
 ## Shows the graph of gamescope app frametimes and latency (only on gamescope obviously)
@@ -179,7 +179,7 @@ fsr
 ## Display the status of HDR (only works in gamescope)
 # hdr
 ## Display the current refresh rate (only works in gamescope)
-# refresh_rate
+refresh_rate
 
 
 ### graphs displays one or more graphs that you chose
