--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -43,28 +43,42 @@ binds {
     # ============================================================
     # SHORTCUTS / UTILITIES
     # ============================================================
+    $PLAYER_SETTINGS = [noinitialfocus; float; size 35% 35%; move 60% 5%; monitor 0; pin]
+    $KITTY_SETTINGS = [float; size 35% 35%; move 60% 5%; monitor 0; pin]
 
     # Start updating
-    bind = CTRL_ALT, U, exec, kitty -e yay -Syu
+    bind = CTRL_ALT, U, exec, $KITTY_SETTINGS \
+        kitty -o font_size=10 -e bash -lc 'yay -Syu || { \
+        code=$?; echo; echo "yay failed (exit $code)"; \
+        read -n1 -r -p "Press any key to close..."; }'
 
     # Cast currently playing media URL to mpv
-    bind = CTRL_ALT, Y, exec, mpv $(playerctl metadata xesam:url)
-    # Alternative (commented): try to read from Firefox player specifically
-    # bind = SUPER_SHIFT, P, exec, mpv $(playerctl -p firefox metadata | grep xesam:url | grep -oP '(https?://\S+)')
+    bind = CTRL_ALT, Y, exec, $PLAYER_SETTINGS \
+        url=$(playerctl -p firefox metadata xesam:url); \
+        start=$(playerctl -p firefox position); \
+        playerctl -p firefox stop; \
+        mpv --start=$start $url
+
+    # Run netflix as app
+    bind = CTRL_ALT, N, exec, $PLAYER_SETTINGS \
+        brave --ozone-platform=x11 --app=https://www.netflix.com/browse  # wayland is buggy here, dont know why
 
     # Zoom toggle
-    bind = SUPER_SHIFT, Z, exec, hyprctl dispatch submap reset; hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
+    bind = SUPER_SHIFT, Z, exec, hyprctl dispatch submap reset; \
+        hypr-zoom -duration=250 -steps=150 -easing=OutBack -easingOut=InBack -interp=Linear
 
     # Lock screen
     bind = CTRL_ALT, L, exec, hyprlock
 
     # Screenshots (Hyprshot)
-    bind = , PRINT, exec, hyprshot -m output -m active -z -o ~/Pictures/Screenshots
-    bind = SHIFT, PRINT, exec, hyprshot -m window -z -o ~/Pictures/Screenshots
-    bind = SUPER_SHIFT, S, exec, hyprshot -m region -z -o ~/Pictures/Screenshots
+    $SCREENSHOT_DIR = ~/Pictures/Screenshots
+
+    bind = , PRINT, exec, hyprshot -m output -m active -z -o $SCREENSHOT_DIR
+    bind = SHIFT, PRINT, exec, hyprshot -m window -z -o $SCREENSHOT_DIR
+    bind = SUPER_SHIFT, S, exec, hyprshot -m region -z -o $SCREENSHOT_DIR
 
     # Get color code (Hyprpicker)
-    bind = SUPER, P, exec, hyprpicker
+    bind = SUPER_SHIFT, P, exec, 'notify-send "Hyprpicker" "Pick a color";hyprpicker'
 
     # ============================================================
     # FOCUS / RESIZE / MOUSE
