unbind print for lenovo

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -80,6 +80,10 @@ binds {
     # Get color code (Hyprpicker)
     bind = SUPER_SHIFT, P, exec, 'notify-send "Hyprpicker" "Pick a color";hyprpicker'
 
+    # hyprlang if HYPR_X15GEN3
+    unbind = , PRINT
+    # hyprlang endif
+
     # ============================================================
     # FOCUS / RESIZE / MOUSE
     # ============================================================
@@ -152,9 +156,6 @@ binds {
     # QUICKSELL SESSIONS (CONDITIONAL)
     # ============================================================
 
-    # ------------------------------------------------------------
-    # NOCTALIA (active when HYPR_NOCTALIA is defined)
-    # ------------------------------------------------------------
 
     # hyprlang if HYPR_NOCTALIA
 
@@ -179,10 +180,6 @@ binds {
 
     # hyprlang endif
 
-
-    # ------------------------------------------------------------
-    # CAELESTIA (active when HYPR_CAELESTIA is defined)
-    # ------------------------------------------------------------
 
     # hyprlang if HYPR_CAELESTIA
 
