workspace changes; keybinds added; streaming; live wallpaper

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -28,16 +28,16 @@ binds {
     # APPLICATION LAUNCHERS
     # ============================================================
 
-    # Terminal: open centered kitty when no windows on workspace, else normal kitty
+    # Terminal
     bind = SUPER, RETURN, exec, kitty
-    bind = SUPER_SHIFT, RETURN, exec, kitty --title centerfloat
- 
-    # File managers
-    bind = SUPER, E, exec, kitty -e yazi ~
-    bind = SUPER_SHIFT, E, exec, thunar ~
 
-    # Fun: Matrix effect (toggle) — uses kitty kitten panel as background
-    bind = SUPER_SHIFT, M, exec, pkill cmatrix || kitty +kitten panel --edge=background -o font_size=12 cmatrix
+    # File managers
+    bind = SUPER, E, exec, thunar ~
+    bind = SUPER_SHIFT, E, exec, kitty -e yazi ~
+
+    # Matrix background
+    bind = CTRL_ALT, M, exec, pkill cmatrix || kitty +kitten panel \
+        --edge=background -o font_size=12 cmatrix -a -b -u 2 -r
 
 
     # ============================================================
@@ -70,6 +70,10 @@ binds {
     # Lock screen
     bind = CTRL_ALT, L, exec, hyprlock
 
+    # Preview SDDM greeter
+    bind = CTRL_ALT, G, exec, sddm-greeter-qt6 --test-mode \
+        --theme /usr/share/sddm/themes/sddm-astronaut-theme/ 2>/dev/null &
+
     # Screenshots (Hyprshot)
     $SCREENSHOT_DIR = ~/Pictures/Screenshots
 
@@ -78,7 +82,7 @@ binds {
     bind = SUPER_SHIFT, S, exec, hyprshot -m region -z -o $SCREENSHOT_DIR
 
     # Get color code (Hyprpicker)
-    bind = SUPER_SHIFT, P, exec, 'notify-send "Hyprpicker" "Pick a color";hyprpicker'
+    bind = SUPER_SHIFT, P, exec, hyprpicker -a
 
     # hyprlang if HYPR_X15GEN3
     unbind = , PRINT
@@ -117,6 +121,7 @@ binds {
     bind = SUPER, 4, workspace, 4
     bind = SUPER, 5, workspace, 5
     bind = SUPER, 6, workspace, 6
+    bind = SUPER, grave, togglespecialworkspace
 
     # Move to workspace 1–6
     bind = SUPER_SHIFT, 1, movetoworkspace, 1
@@ -200,4 +205,3 @@ binds {
 
     # hyprlang endif
 }
-
