--- a/.config/hypr/conf.d/windowrules.conf
+++ b/.config/hypr/conf.d/windowrules.conf
@@ -1,28 +1,20 @@
 
 windowrules {
-    $PATTERN =.*xdg-desktop-portal-gtk.*
-    windowrulev2 = size 50% 40%, class:^($PATTERN)
-    windowrulev2 = float, class:^($PATTERN)
-    windowrulev2 = move 25% 30%, class:^($PATTERN)
+    # Portal file pickers (GTK & KDE)
+    windowrulev2 = float,  class:^(xdg-desktop-portal-gtk)$
+    windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$
+    windowrulev2 = float,  class:^(xdg-desktop-portal-kde)$
+    windowrulev2 = center, class:^(xdg-desktop-portal-kde)$
 
-    $PATTERN =.*Save Image.*
-    windowrulev2 = size 50% 40%, title:^($PATTERN)
-    windowrulev2 = float, class:^($PATTERN)
-    windowrulev2 = move 25% 30%, title:^($PATTERN)
+    # Generic “dialog-like” titles
+    windowrulev2 = float,  title:^(Open|Save|Save As|Choose|Select|Export|Import)(.*)$
+    windowrulev2 = center, title:^(Open|Save|Save As|Choose|Select|Export|Import)(.*)$
 
-    $PATTERN =.*centerfloat.*
-    windowrulev2 = float, title:^($PATTERN)
-    windowrulev2 = size 50% 40%, title:^($PATTERN)
-    windowrulev2 = centerwindow, title:^($PATTERN)
+    windowrulev2 = workspace 3, class:^(?i)dev.zed.Zed$
+    windowrulev2 = workspace 4, class:^(?i)steam$
+    windowrulev2 = workspace 4, title:^(?i)TeamSpeak$
+    windowrulev2 = workspace 4, title:^(?i)Discord$
+    windowrulev2 = workspace 5, class:^(?i)spotify$
 
-    $PATTERN=.*steam.*
-    windowrulev2 = workspace 5, class:^($PATTERN)
-    windowrulev2 = float, class:^($PATTERN)
-    windowrulev2 = maximize, class:^($PATTERN), title:^.*Steam.*
-    # windowrulev2 = centerwindow, class:^($PATTERN)
-
-    $PATTERN =.*winboat.*
-    windowrulev2 = float, class:^($PATTERN)
-
-    windowrulev2 = float, class:^(.*thunar.*), title: ^(.*File.*)
+    windowrulev2 = float, class:^(?i)thunar$, title:^(?!Thunar$).*
 }
