--- a/.config/hypr/conf.d/workspaces.conf
+++ b/.config/hypr/conf.d/workspaces.conf
@@ -1,10 +1,22 @@
 
-workspace=1
-workspace=2
-workspace=3
-workspace=4
-workspace=5
-workspace=6
+workspace = 1
+workspace = 2
+workspace = 3
+workspace = 4
+workspace = 5
+
+workspace=r[2-3] w[t1], gapsout:200 150 200 150
+
+# hyprlang if HYPR_Z790E
+
+workspace = 1, monitor:DP-3, persistent:true
+workspace = 2, monitor:DP-3, persistent:true
+workspace = 3, monitor:DP-3, persistent:true
+workspace = 4, monitor:DP-3, persistent:true
+workspace = 5, monitor:DP-1, persistent:true
+
+# hyprlang endif
+
 
 general {
     layout = dwindle
