different small changes

--- a/.config/hypr/conf.d/autostart.conf
+++ b/.config/hypr/conf.d/autostart.conf
@@ -51,3 +51,11 @@ exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISAB
 
 exec-once = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
 
+
+# ------------------------------------------------------------
+# Hyprland
+# ------------------------------------------------------------
+
+# Focus right monitor on a two monitor setting with the
+# right one being the primary monitor.
+exec-once = hyprctl dispatch workspace 1
