--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -12,13 +12,19 @@ binds {
     bind = SUPER, P, pin
 
     # Center a window as float
-    bind = SUPER, C, exec, sh -c 'hyprctl dispatch setfloating active; hyprctl dispatch resizeactive exact 50% 40%; hyprctl dispatch centerwindow'
+    bind = SUPER, C, setfloating, active; resizeactive, exact 50% 40%; centerwindow
 
     # Master layout control / swap
     bind = SUPER, O, layoutmsg, swapwithmaster master
 
-    # Swap workspace to next monitor
-    bind = ALT, TAB, exec, $HOME/.config/hypr/scripts/dispatch.sh $(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1) --move-workspace
+    # Swap workspace to passive monitor
+    # - there must be a more elegant way?
+    bind = ALT, TAB, exec, \
+        passive_monitor="$(hyprctl monitors -j | jq '.[] | select(.focused == false).id')"; \
+        active_ws="$(hyprctl activeworkspace | grep ID | cut -d" " -f3 | head -n 1)"; \
+        hyprctl dispatch moveworkspacetomonitor $active_ws $passive_monitor; \
+        hyprctl dispatch focusmonitor $passive_monitor; \
+        hyprctl dispatch workspace $active_ws
 
     # Kill active window
     bind = SUPER_SHIFT, C, killactive
