--- a/.config/hypr/conf.d/workspaces.conf
+++ b/.config/hypr/conf.d/workspaces.conf
@@ -9,7 +9,7 @@ workspace=r[2-3] w[t1], gapsout:200 150 200 150
 
 # hyprlang if HYPR_Z790E
 
-workspace = 1, monitor:DP-3, persistent:true
+workspace = 1, monitor:DP-3, default=True, persistent:true
 workspace = 2, monitor:DP-3, persistent:true
 workspace = 3, monitor:DP-3, persistent:true
 workspace = 4, monitor:DP-3, persistent:true
