lots of small changes

--- a/.config/hypr/conf.d/input.conf
+++ b/.config/hypr/conf.d/input.conf
@@ -7,9 +7,8 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = compose:ralt
+    kb_options = compose:ralt, ctrl:nocaps
     kb_rules =
-
     repeat_delay = 250
     repeat_rate = 50
 
