--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -11,9 +11,6 @@ binds {
     bind = SUPER, M, fullscreen
     bind = SUPER, P, pin
 
-    # Center a window as float
-    bind = SUPER, C, setfloating, active; resizeactive, exact 50% 40%; centerwindow
-
     # Master layout control / swap
     bind = SUPER, O, layoutmsg, swapwithmaster master
 
@@ -90,6 +87,9 @@ binds {
     # Get color code (Hyprpicker)
     bind = SUPER_SHIFT, P, exec, hyprpicker -a
 
+    # Gamemode toggle
+    bind = SUPER, F1, exec, ~/.config/hypr/scripts/gamemode.sh
+
     # hyprlang if HYPR_X15GEN3
     unbind = , PRINT
     # hyprlang endif
@@ -111,9 +111,16 @@ binds {
     bind = SUPER_SHIFT, k, resizeactive, 0 -$INCREMENT
     bind = SUPER_SHIFT, j, resizeactive, 0 $INCREMENT
 
-    # Mouse binds
+    # Resize with mouse
     bindm = SUPER, mouse:272, movewindow
     bindm = SUPER, mouse:273, resizewindow
+
+    # Zoom with mouse wheel
+    bind = SUPER, mouse_down, exec, hyprctl -q keyword cursor:zoom_factor \
+        $(hyprctl getoption cursor:zoom_factor -j | jq '.float * 1.1')
+    bind = SUPER, mouse_up, exec, hyprctl -q keyword cursor:zoom_factor \
+        $(hyprctl getoption cursor:zoom_factor -j | jq '(.float * 0.9) | if . < 1 then 1 else . end')
+    bind = SUPER, mouse:274, exec, hyprctl -q keyword cursor:zoom_factor 1
 
 
     # ============================================================
@@ -138,8 +145,8 @@ binds {
     bind = SUPER_SHIFT, 6, movetoworkspace, 6
 
     # Scroll through workspaces
-    bind = SUPER, mouse_down, workspace, e+1
-    bind = SUPER, mouse_up, workspace, e-1
+    # bind = SUPER, mouse_down, workspace, e+1
+    # bind = SUPER, mouse_up, workspace, e-1
 
 
     # ============================================================
@@ -178,7 +185,7 @@ binds {
     unbind = ,XF86MonBrightnessUp
     unbind = ,XF86MonBrightnessDown
 
-    bind = CTRL_ALT, L, exec, qs -c noctalia ipc call lockScreen toggle
+    bind = CTRL_ALT, L, exec, qs -c noctalia ipc call lockScreen lock
 
     # NOCTALIA drawers / actions (qs IPC)
     bind = SUPER, R, exec, qs -c noctalia ipc call launcher toggle
@@ -200,6 +207,7 @@ binds {
     unbind = SUPER, S
     unbind = SUPER_SHIFT, Q
     unbind = CTRL_ALT, L
+    unbind = SUPER, F1
 
     # CAELESTIA drawers / actions (caelestia CLI)
     bind = SUPER, R, exec, caelestia shell drawers toggle launcher
@@ -208,6 +216,7 @@ binds {
     bind = SUPER_SHIFT, Q, exec, caelestia shell drawers toggle session
 
     bind = CTRL_ALT, L, exec, caelestia shell lock lock
+    bind = SUPER, F1, exec, caelestia shell gameMode toggle
 
     # hyprlang endif
 }
