--- a/.config/hypr/conf.d/vanity.conf
+++ b/.config/hypr/conf.d/vanity.conf
@@ -33,9 +33,6 @@ animations {
     # first_launch_animation = true
 }
 
-cursor {
-    no_hardware_cursors = true
-}
 
 decoration {
  # hyprlang if HYPR_NOCTALIA
@@ -79,5 +76,32 @@ decoration {
         passes = 1
         vibrancy = 0.1696
     }
+# hyprlang endif
+}
+
+
+general {
+# hyprlang if HYPR_NOCTALIA
+    gaps_out = 0
+    gaps_in = 0
+
+    border_size = 0
+
+    col.active_border = rgba(00000000)
+    col.inactive_border = rgba(00000000)
+
+# hyprlang endif
+
+
+# hyprlang if HYPR_CAELESTIA
+    gaps_out = 10
+    gaps_in = 5
+
+    border_size = 2
+
+    # col.active_border = rgba(C9BFFF99)
+    col.active_border = rgb($primary_paletteKeyColor)
+    # col.inactive_border = rgba(2B292EFF)
+    col.inactive_border = rgb($surfaceContainerHigh)
 # hyprlang endif
 }
