--- a/.config/hypr/conf.d/windowrules.conf
+++ b/.config/hypr/conf.d/windowrules.conf
@@ -1,5 +1,8 @@
 
 windowrules {
+    # Pinned windows `SUPER+P` (first = active, second = inactive)
+    windowrulev2 = bordercolor rgb($error) rgb($error), pinned:1
+
     # Portal file pickers (GTK & KDE)
     windowrulev2 = float,  class:^(xdg-desktop-portal-gtk)$
     windowrulev2 = center, class:^(xdg-desktop-portal-gtk)$
@@ -16,5 +19,7 @@ windowrules {
     windowrulev2 = workspace 4, title:^(?i)Discord$
     windowrulev2 = workspace 5, class:^(?i)spotify$
 
-    windowrulev2 = float, class:^(?i)thunar$, title:^(?!Thunar$).*
+    windowrulev2 = float, class:^thunar$
+    # …except the main Thunar window
+    windowrulev2 = tile, class:^thunar$, title:.*Thunar.*
 }
