--- a/.config/hypr/conf.d/settings.conf
+++ b/.config/hypr/conf.d/settings.conf
@@ -1,30 +1,5 @@
 
 general {
-# hyprlang if HYPR_NOCTALIA
-    gaps_out = 0
-    gaps_in = 0
-
-    border_size = 0
-
-    col.active_border = rgba(00000000)
-    col.inactive_border = rgba(00000000)
-
-# hyprlang endif
-
-
-# hyprlang if HYPR_CAELESTIA
-    gaps_out = 10
-    gaps_in = 5
-
-    border_size = 2
-
-    # col.active_border = rgba(C9BFFF99)
-    col.active_border = rgb($primary_paletteKeyColor)
-    # col.inactive_border = rgba(2B292EFF)
-    col.inactive_border = rgb($surfaceContainerHigh)
-# hyprlang endif
-
-
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
@@ -40,6 +15,7 @@ general {
 
 cursor {
     hide_on_key_press = true
+    no_hardware_cursors = true
 }
 
 
@@ -55,10 +31,12 @@ misc {
     new_window_takes_over_fullscreen = 2
 }
 
+
 xwayland {
     force_zero_scaling = true
     use_nearest_neighbor = false
 }
+
 
 experimental {
     xx_color_management_v4 = true
