--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,136 +1,49 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run `zed: open default settings` from the
-// command palette (cmd-shift-p / ctrl-shift-p)
 {
-    // ------ General ------
-    "lsp_document_colors": "background",
     "active_pane_modifiers": {
         "border_size": 2.0
     },
-    "use_system_window_tabs": false,
-    "centered_layout": {
-        "right_padding": 0.2,
-        "left_padding": 0.2
-    },
-    "bottom_dock_layout": "full",
-    "title_bar": {
-        "show_menus": false,
-        "show_onboarding_banner": false,
-        "show_project_items": true,
-        "show_branch_icon": true
-    },
-    "status_bar": {
-        "active_language_button": true
-    },
     "agent": {
-        "enabled": true,
-        "play_sound_when_agent_done": true,
         "default_model": {
-            "provider": "openai",
-            "model": "o3-mini"
+            "model": "o3-mini",
+            "provider": "openai"
+        },
+        "enabled": true,
+        "inline_assistant_model": {
+            "model": "claude-3-7-sonnet-thinking-latest",
+            "provider": "zed.dev"
         },
         "model_parameters": [],
-        "inline_assistant_model": {
-            "provider": "zed.dev",
-            "model": "claude-3-7-sonnet-thinking-latest"
-        }
+        "play_sound_when_agent_done": true
     },
-    "features": { "edit_prediction_provider": "none" },
-    "vim_mode": true,
     "base_keymap": "VSCode",
-    "telemetry": {
-        "metrics": false,
-        "diagnostics": false
-    },
-    // ------ Agent, AI, whatever ------
-    // Vanity
-    "theme": {
-        "mode": "system",
-        "light": "Caelestia",
-        "dark": "Caelestia"
-    },
-    "icon_theme": "Material Icon Theme",
-    "ui_font_size": 16,
-    "buffer_font_size": 16,
-    "ui_font_family": "Monaspace Krypton",
+    "bottom_dock_layout": "full",
     "buffer_font_family": "Monaspace Krypton",
-    // ------ Layout ------
-    "tab_bar": {
-        "show": true,
-        "show_nav_history_buttons": false
+    "buffer_font_size": 16,
+    "centered_layout": {
+        "left_padding": 0.2,
+        "right_padding": 0.2
     },
-    "tabs": {
-        "file_icons": true,
-        "git_status": true
+    "collaboration_panel": {
+        "button": false
     },
-    "toolbar": {
-        "breadcrumbs": true,
-        "quick_actions": false,
-        "selections_menu": true
-    },
-    "scrollbar": { "show": "never" },
-    "project_panel": { "button": true, "dock": "right", "indent_size": 20 },
-    "git_panel": { "button": true, "dock": "right" },
-    "outline_panel": { "button": false },
-    "collaboration_panel": { "button": false },
-    // ------ Editor ------
     "cursor_blink": true,
-    // Visually show tabs and spaces  (none, all, selection, boundary, trailing)
-    "show_whitespaces": "all",
-    "indent_guides": {
-        "enabled": true,
-        "line_width": 1, // Width of guides in pixels [1-10]
-        "active_line_width": 1, // Width of active guide in pixels [1-10]
-        "coloring": "fixed", // disabled, fixed, indent_aware
-        "background_coloring": "disabled" // disabled, indent_aware
-    },
-    "git": { "git_gutter": "tracked_files", "inline_blame": { "enabled": true } },
-    "relative_line_numbers": true,
-    "preferred_line_length": 120,
-    "wrap_guides": [120],
-    "show_wrap_guides": true,
-    "use_autoclose": false,
-    "inlay_hints": { "enabled": true },
     "diagnostics": {
         "include_warnings": false,
         "inline": {
             "enabled": true,
-            "update_debounce_ms": 150,
-            "padding": 4,
+            "max_severity": null,
             "min_column": 0,
-            "max_severity": null
-        }
-    },
-    "tab_size": 4,
-    // ------ VIM ------
-    "vim": {
-        "default_mode": "normal",
-        "use_system_clipboard": "always",
-        "use_smartcase_find": true,
-        "highlight_on_yank_duration": 150
-    },
-    "vertical_scroll_margin": 8,
-    // ------ Terminal ------
-    "terminal": {
-        "font_family": "Monaspace Krypton",
-        "copy_on_select": true,
-        "cursor_shape": "bar",
-        "shell": {
-            "program": "zsh"
+            "padding": 4,
+            "update_debounce_ms": 150
         }
     },
     "experimental.theme_overrides": {
-        "hint.background": "#333a50",
-        "error.background": "#8d3250",
+        //     "error.background": "#8d3250",
+        //     "hint.background": "#333a50",
         "players": [
             {
-                "cursor": "#FF6767",
                 "background": "#0f0f0f",
+                "cursor": "#FF6767",
                 "selection": "#8d3250"
             }
         ],
@@ -143,24 +56,111 @@
             }
         }
     },
-    "lsp": {
-        "pyright": {
-            "settings": {
-                "python.analysis": {
-                    "diagnosticMode": "workspace",
-                    "typeCheckingMode": "basic"
-                },
-                "python": {
-                    "pythonPath": ".venv/bin/python"
-                }
-            }
+    "features": {
+        "edit_prediction_provider": "none"
+    },
+    "git": {
+        "git_gutter": "tracked_files",
+        "inline_blame": {
+            "enabled": true
         }
+    },
+    "git_panel": {
+        "button": true,
+        "dock": "right"
+    },
+    "icon_theme": "Material Icon Theme",
+    "indent_guides": {
+        "active_line_width": 1,
+        "background_coloring": "disabled",
+        "coloring": "fixed",
+        "enabled": true,
+        "line_width": 1
+    },
+    "inlay_hints": {
+        "enabled": true
     },
     "languages": {
         "Python": {
             "code_actions_on_format": {},
-            "language_servers": ["pyright", "ruff"],
-            "format_on_save": "on"
+            "format_on_save": "on",
+            "language_servers": ["pyright", "ruff"]
         }
-    }
+    },
+    "lsp": {
+        "pyright": {
+            "settings": {
+                "python": {
+                    "pythonPath": ".venv/bin/python"
+                },
+                "python.analysis": {
+                    "diagnosticMode": "workspace",
+                    "typeCheckingMode": "basic"
+                }
+            }
+        }
+    },
+    "lsp_document_colors": "background",
+    "outline_panel": {
+        "button": false
+    },
+    "preferred_line_length": 120,
+    "project_panel": {
+        "button": true,
+        "dock": "right",
+        "indent_size": 20
+    },
+    "relative_line_numbers": true,
+    "scrollbar": {
+        "show": "never"
+    },
+    "show_wrap_guides": true,
+    "status_bar": {
+        "active_language_button": true
+    },
+    "tab_bar": {
+        "show": true,
+        "show_nav_history_buttons": false
+    },
+    "tab_size": 4,
+    "tabs": {
+        "file_icons": true,
+        "git_status": true
+    },
+    "telemetry": {
+        "diagnostics": false,
+        "metrics": false
+    },
+    "terminal": {
+        "copy_on_select": true,
+        "cursor_shape": "bar",
+        "font_family": "Monaspace Krypton",
+        "shell": {
+            "program": "zsh"
+        }
+    },
+    "theme": {
+        "dark": "Caelestia",
+        "light": "Caelestia",
+        "mode": "system"
+    },
+    "title_bar": {
+        "show_branch_icon": true,
+        "show_menus": false,
+        "show_onboarding_banner": false,
+        "show_project_items": true
+    },
+    "ui_font_family": "Monaspace Krypton",
+    "ui_font_size": 16,
+    "use_autoclose": false,
+    "use_system_window_tabs": false,
+    "vertical_scroll_margin": 8,
+    "vim": {
+        "default_mode": "normal",
+        "highlight_on_yank_duration": 150,
+        "use_smartcase_find": true,
+        "use_system_clipboard": "always"
+    },
+    "vim_mode": true,
+    "wrap_guides": [120]
 }
