collection of small changes

--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -143,6 +143,7 @@ binds {
     bind = SUPER_SHIFT, 4, movetoworkspace, 4
     bind = SUPER_SHIFT, 5, movetoworkspace, 5
     bind = SUPER_SHIFT, 6, movetoworkspace, 6
+    bind = SUPER_SHIFT, grave, movetoworkspacesilent, special
 
     # Scroll through workspaces
     # bind = SUPER, mouse_down, workspace, e+1
@@ -207,7 +208,7 @@ binds {
     unbind = SUPER, S
     unbind = SUPER_SHIFT, Q
     unbind = CTRL_ALT, L
-    unbind = SUPER, F1
+    # unbind = SUPER, F1
 
     # CAELESTIA drawers / actions (caelestia CLI)
     bind = SUPER, R, exec, caelestia shell drawers toggle launcher
@@ -216,7 +217,7 @@ binds {
     bind = SUPER_SHIFT, Q, exec, caelestia shell drawers toggle session
 
     bind = CTRL_ALT, L, exec, caelestia shell lock lock
-    bind = SUPER, F1, exec, caelestia shell gameMode toggle
+    # bind = SUPER, F1, exec, caelestia shell gameMode toggle
 
     # hyprlang endif
 }
