--- a/.config/hypr/conf.d/windowrules.conf
+++ b/.config/hypr/conf.d/windowrules.conf
@@ -20,6 +20,7 @@ windowrules {
     windowrulev2 = workspace 5, class:^(?i)spotify$
 
     windowrulev2 = float, class:^thunar$
+    windowrulev2 = tile, class:^Thunar$
     # …except the main Thunar window
     windowrulev2 = tile, class:^thunar$, title:.*Thunar.*
 }
