config handling for quickshell adapted

--- a/.config/hypr/conf.d/autostart.conf
+++ b/.config/hypr/conf.d/autostart.conf
@@ -26,8 +26,8 @@ exec-once = systemctl --user start hyprpolkitagent || $NOTIFY_ERROR "hyprpolkita
 
 # hyprlang if HYPR_NOCTALIA
 
-exec-once = git -C $HOME/.config/quickshell/noctalia/ pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "NOCTALIA up to date." || $NOTIFY_ERROR "NOCTALIA was updated."
-exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c noctalia
+exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c noctalia-shell
+exec-once = [[ -e "~/.config/noctalia/settings.json" ]] || ln -s "$HOME/.config/noctalia/$(cat /etc/hostname)-settings.json" ~/.config/noctalia/settings.json
 
 # hyprlang endif
 
@@ -39,8 +39,8 @@ exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISAB
 
 # hyprlang if HYPR_CAELESTIA
 
-exec-once = git -C $HOME/.config/quickshell/caelestia pull| grep -q 'Already up to date.' && $NOTIFY_SUCCESS "CAELESTIA up to date." || $NOTIFY_ERROR "CAELESTIA was updated."
 exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISABLE_DISK_CACHE=1 qs -c caelestia
+exec-once = [[ -e "~/.config/caelestia/shell.json" ]] || ln -s "$HOME/.config/caelestia/$(cat /etc/hostname)-shell.json" ~/.config/caelestia/shell.json
 
 # hyprlang endif
 
@@ -49,7 +49,7 @@ exec-once = killall -9 qs; killall -9 quickshell; QS_NO_RELOAD_POPUP=1 QML_DISAB
 # OpenRGB — Set Leviathan V2 X LEDs to black
 # ------------------------------------------------------------
 
-exec-once = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
+exec = openrgb -d "$(openrgb -l | awk -F': ' '/Razer Leviathan V2 X/{print $1; exit}')" -c 000000
 
 
 # ------------------------------------------------------------
