--- a/.config/hypr/conf.d/keybinds.conf
+++ b/.config/hypr/conf.d/keybinds.conf
@@ -90,7 +90,7 @@ binds {
     # Gamemode toggle
     bind = SUPER, F1, exec, ~/.config/hypr/scripts/gamemode.sh
 
-    # hyprlang if HYPR_X15GEN3
+    # hyprlang if HYPR_X13GEN5
     unbind = , PRINT
     # hyprlang endif
 
@@ -186,16 +186,16 @@ binds {
     unbind = ,XF86MonBrightnessUp
     unbind = ,XF86MonBrightnessDown
 
-    bind = CTRL_ALT, L, exec, qs -c noctalia ipc call lockScreen lock
+    bind = CTRL_ALT, L, exec, qs -c noctalia-shell ipc call lockScreen lock
 
     # NOCTALIA drawers / actions (qs IPC)
-    bind = SUPER, R, exec, qs -c noctalia ipc call launcher toggle
-    bind = SUPER, S, exec, qs -c noctalia ipc call controlCenter toggle
-    bind = SUPER_SHIFT, Q, exec, qs -c noctalia ipc call sessionMenu toggle
-
+    bind = SUPER, R, exec, qs -c noctalia-shell ipc call launcher toggle
+    bind = SUPER, S, exec, qs -c noctalia-shell ipc call controlCenter toggle
+    bind = SUPER_SHIFT, Q, exec, qs -c noctalia-shell ipc call sessionMenu toggle
     # Override brightness keys to use NOCTALIA IPC
-    binde = ,XF86MonBrightnessUp, exec, qs -c noctalia ipc call brightness increase
-    binde = ,XF86MonBrightnessDown, exec, qs -c noctalia ipc call brightness decrease
+
+    binde = ,XF86MonBrightnessUp, exec, qs -c noctalia-shell ipc call brightness increase
+    binde = ,XF86MonBrightnessDown, exec, qs -c noctalia-shell ipc call brightness decrease
 
     # hyprlang endif
 
